Fixed overflow-x issue

--- a/rtpage1menu.css
+++ b/rtpage1menu.css
@@ -355,7 +355,7 @@ section h1{
           position: absolute;
           transform: translateX(-150px);
           text-align: center;
-          width: 300px;
+          width: 200px;
       }
   }
   
